@@ -8,12 +8,18 @@ import ca.gc.aafc.collection.api.entities.MaterialSample;
 import ca.gc.aafc.collection.api.entities.MaterialSampleNameGeneration;
 import ca.gc.aafc.collection.api.entities.SplitConfiguration;
 import ca.gc.aafc.collection.api.testsupport.fixtures.MaterialSampleTestFixture;
+import ca.gc.aafc.dina.jsonapi.JsonApiDocument;
+import ca.gc.aafc.dina.jsonapi.JsonApiDocuments;
+import ca.gc.aafc.dina.repository.JsonApiModelAssistant;
+import ca.gc.aafc.dina.testsupport.jsonapi.JsonAPITestHelper;
 import ca.gc.aafc.dina.testsupport.security.WithMockKeycloakUser;
 
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
+import java.util.Map;
+import java.util.UUID;
 import javax.inject.Inject;
 
 public class MaterialSampleIdentifierGeneratorRepositoryIT extends BaseRepositoryIT {
@@ -31,16 +37,15 @@ public class MaterialSampleIdentifierGeneratorRepositoryIT extends BaseRepositor
     MaterialSampleDto parentDto = MaterialSampleTestFixture.newMaterialSample();
     parentDto.setMaterialSampleType(MaterialSample.MaterialSampleType.WHOLE_ORGANISM);
     parentDto.setMaterialSampleName("ABC-01");
-    parentDto = materialSampleRepository.create(parentDto);
+    UUID parentUuid = createMaterialSample(parentDto);
 
     MaterialSampleDto child1 = MaterialSampleTestFixture.newMaterialSample();
-    child1.setParentMaterialSample(parentDto);
     child1.setMaterialSampleType(MaterialSample.MaterialSampleType.CULTURE_STRAIN);
     child1.setMaterialSampleName("ABC-01-a");
-    child1 = materialSampleRepository.create(child1);
+    UUID child1Uuid = createMaterialSampleWithParent(child1, parentUuid);
 
     MaterialSampleIdentifierGeneratorDto generatedDto = MaterialSampleIdentifierGeneratorDto.builder()
-      .currentParentUUID(child1.getUuid())
+      .currentParentUUID(child1Uuid)
       .strategy(MaterialSampleNameGeneration.IdentifierGenerationStrategy.TYPE_BASED)
       .characterType(MaterialSampleNameGeneration.CharacterType.LOWER_LETTER)
       .materialSampleType(MaterialSample.MaterialSampleType.CULTURE_STRAIN)
@@ -48,9 +53,29 @@ public class MaterialSampleIdentifierGeneratorRepositoryIT extends BaseRepositor
       .build();
 
     MaterialSampleIdentifierGeneratorDto dto = materialSampleIdentifierGeneratorRepository.create(generatedDto);
-    List<String> nextIdentifiers = dto.getNextIdentifiers().get(child1.getUuid());
+    List<String> nextIdentifiers = dto.getNextIdentifiers().get(child1Uuid);
     assertEquals("ABC-01-b", nextIdentifiers.get(0));
     assertEquals("ABC-01-c", nextIdentifiers.get(1));
+  }
+
+  private UUID createMaterialSample(MaterialSampleDto dto) {
+    JsonApiDocument materialSampleToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(dto)
+    );
+    return JsonApiModelAssistant.extractUUIDFromRepresentationModelLink(materialSampleRepository
+      .onCreate(materialSampleToCreate));
+  }
+
+  private UUID createMaterialSampleWithParent(MaterialSampleDto dto, UUID parentUUID) {
+    JsonApiDocument materialSampleToCreate = JsonApiDocuments.createJsonApiDocument(
+      null, MaterialSampleDto.TYPENAME,
+      JsonAPITestHelper.toAttributeMap(dto),
+      Map.of("parentMaterialSample", JsonApiDocument.ResourceIdentifier.builder()
+        .id(parentUUID).type(MaterialSampleDto.TYPENAME).build())
+    );
+    return JsonApiModelAssistant.extractUUIDFromRepresentationModelLink(materialSampleRepository
+      .onCreate(materialSampleToCreate));
   }
 
   @Test
@@ -61,10 +86,10 @@ public class MaterialSampleIdentifierGeneratorRepositoryIT extends BaseRepositor
     parentDto.setMaterialSampleType(MaterialSample.MaterialSampleType.CULTURE_STRAIN);
     parentDto.setMaterialSampleName("Sample10");
     parentDto.setIsBaseForSplitByType(true);
-    parentDto = materialSampleRepository.create(parentDto);
+    UUID parentUuid = createMaterialSample(parentDto);
 
     MaterialSampleIdentifierGeneratorDto generatedDto = MaterialSampleIdentifierGeneratorDto.builder()
-      .currentParentUUID(parentDto.getUuid())
+      .currentParentUUID(parentUuid)
       .strategy(MaterialSampleNameGeneration.IdentifierGenerationStrategy.TYPE_BASED)
       .characterType(MaterialSampleNameGeneration.CharacterType.UPPER_LETTER)
       .materialSampleType(MaterialSample.MaterialSampleType.CULTURE_STRAIN)
@@ -73,7 +98,7 @@ public class MaterialSampleIdentifierGeneratorRepositoryIT extends BaseRepositor
       .build();
 
     MaterialSampleIdentifierGeneratorDto dto = materialSampleIdentifierGeneratorRepository.create(generatedDto);
-    List<String> nextIdentifiers = dto.getNextIdentifiers().get(parentDto.getUuid());
+    List<String> nextIdentifiers = dto.getNextIdentifiers().get(parentUuid);
     assertEquals("Sample10-A", nextIdentifiers.get(0));
     assertEquals("Sample10-B", nextIdentifiers.get(1));
   }
@@ -85,33 +110,31 @@ public class MaterialSampleIdentifierGeneratorRepositoryIT extends BaseRepositor
     MaterialSampleDto parentDto = MaterialSampleTestFixture.newMaterialSample();
     parentDto.setMaterialSampleType(MaterialSample.MaterialSampleType.WHOLE_ORGANISM);
     parentDto.setMaterialSampleName("ABC-01");
-    parentDto = materialSampleRepository.create(parentDto);
+    UUID parentUuid = createMaterialSample(parentDto);
 
     MaterialSampleDto child1 = MaterialSampleTestFixture.newMaterialSample();
-    child1.setParentMaterialSample(parentDto);
     child1.setMaterialSampleType(MaterialSample.MaterialSampleType.CULTURE_STRAIN);
     child1.setMaterialSampleName("ABC-01-a");
-    child1 = materialSampleRepository.create(child1);
+    UUID child1Uuid = createMaterialSampleWithParent(child1, parentUuid);
 
     MaterialSampleDto child2 = MaterialSampleTestFixture.newMaterialSample();
-    child2.setParentMaterialSample(parentDto);
     child2.setMaterialSampleType(MaterialSample.MaterialSampleType.CULTURE_STRAIN);
     child2.setMaterialSampleName("ABC-01-b");
-    child2 = materialSampleRepository.create(child2);
+    UUID child2Uuid = createMaterialSampleWithParent(child2, parentUuid);
 
     MaterialSampleIdentifierGeneratorDto generatedDto = MaterialSampleIdentifierGeneratorDto.builder()
-      .currentParentsUUID(List.of(child1.getUuid(), child2.getUuid()))
+      .currentParentsUUID(List.of(child1Uuid, child2Uuid))
       .strategy(MaterialSampleNameGeneration.IdentifierGenerationStrategy.TYPE_BASED)
       .characterType(MaterialSampleNameGeneration.CharacterType.LOWER_LETTER)
       .materialSampleType(MaterialSample.MaterialSampleType.CULTURE_STRAIN)
       .build();
 
     MaterialSampleIdentifierGeneratorDto dto = materialSampleIdentifierGeneratorRepository.create(generatedDto);
-    List<String> nextIdentifiers = dto.getNextIdentifiers().get(child1.getUuid());
-    assertEquals("ABC-01-c", nextIdentifiers.get(0));
+    List<String> nextIdentifiers = dto.getNextIdentifiers().get(child1Uuid);
+    assertEquals("ABC-01-c", nextIdentifiers.getFirst());
 
-    nextIdentifiers = dto.getNextIdentifiers().get(child2.getUuid());
-    assertEquals("ABC-01-d", nextIdentifiers.get(0));
+    nextIdentifiers = dto.getNextIdentifiers().get(child2Uuid);
+    assertEquals("ABC-01-d", nextIdentifiers.getFirst());
   }
 
   @Test
@@ -122,10 +145,10 @@ public class MaterialSampleIdentifierGeneratorRepositoryIT extends BaseRepositor
     parentDto.setMaterialSampleType(MaterialSample.MaterialSampleType.WHOLE_ORGANISM);
     parentDto.setMaterialSampleName("ABC-01");
     parentDto.setIsBaseForSplitByType(true);
-    parentDto = materialSampleRepository.create(parentDto);
+    UUID parentUuid = createMaterialSample(parentDto);
 
     MaterialSampleIdentifierGeneratorDto generatedDto = MaterialSampleIdentifierGeneratorDto.builder()
-      .currentParentUUID(parentDto.getUuid())
+      .currentParentUUID(parentUuid)
       .strategy(MaterialSampleNameGeneration.IdentifierGenerationStrategy.TYPE_BASED)
       .characterType(MaterialSampleNameGeneration.CharacterType.LOWER_LETTER)
       .materialSampleType(MaterialSample.MaterialSampleType.CULTURE_STRAIN)
@@ -134,7 +157,7 @@ public class MaterialSampleIdentifierGeneratorRepositoryIT extends BaseRepositor
       .build();
 
     MaterialSampleIdentifierGeneratorDto dto = materialSampleIdentifierGeneratorRepository.create(generatedDto);
-    List<String> nextIdentifiers = dto.getNextIdentifiers().get(parentDto.getUuid());
+    List<String> nextIdentifiers = dto.getNextIdentifiers().get(parentUuid);
     assertEquals("ABC-01 a", nextIdentifiers.get(0));
     assertEquals("ABC-01 b", nextIdentifiers.get(1));
   }
